--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,1 +1,21 @@
 <h1>index page</h1>
+
+<p>
+  <%= link_to "Create a Todo", new_todo_path %>
+</p>
+
+
+<table>
+  <tr>
+    <th>Name</th>
+    <th>description</th>
+  </tr>
+  <% @todos.each do |todo| %>
+    <tr>
+      <td><%= todo.name %></td>
+      <td><%= todo.description %></td>
+      <td><%= link_to "Edit", edit_todo_path(todo) %></td>
+      <td><%= link_to "Show", todo_path(todo) %></td>
+    </tr>
+  <% end %>
+</table>
