--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -7,3 +7,7 @@
 <p>
   description: <%= @todo.description %>
 </p>
+
+<%= link_to "Edit this todo", edit_todo_path(@todo) %>
+|
+<%= link_to "back to Todos listing", todos_path %>
