--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,19 +1,2 @@
 <h1>Edit</h1>
-
-<%= form_for @todo do |f| %>
-  <p>
-    <%= f.label :name %> <br>
-    <%= f.text_area :name %>
-  </p>
-
-  <p>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
-<%= link_to "Todos listing", todos_path%>
+<%= render 'form' %>
