--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,27 +1,2 @@
 <h1>Create a new Todo</h1>
-<% if @todo.errors.any? %>
-  <h2>The following errors prevented the todo from being saved</h2>
-  <ul>
-    <% @todo.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @todo do |f| %>
-  <p>
-    <%= f.label :name %> <br>
-    <%= f.text_area :name %>
-  </p>
-
-  <p>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-
-<%= link_to "Todos listing", todos_path%>
+<%= render 'form' %>
